--- a/src/main/static/package.json
+++ b/src/main/static/package.json
@@ -8,32 +8,43 @@
     "url": "https://github.com/tomitribe/tomitribe.io.git"
   },
   "license": "Apache-2.0",
-  "dependencies": {
-    "gulp": "3.9.0",
-    "gulp-jade": "1.1.0",
-    "gulp-sass": "2.0.4",
-    "gulp-autoprefixer": "2.3.1",
-    "gulp-uglify": "1.4.0",
-    "gulp-sourcemaps": "1.5.2",
-    "gulp-concat": "2.6.0",
-    "gulp.spritesmith": "4.3.0",
-    "gulp-if": "1.2.5",
-    "del": "2.0.0",
-    "gulp-sync": "0.1.4",
-    "gulp-watch": "4.3.5",
-    "jstransformer-marked": "1.0.1",
-    "bower": "1.6.5",
-    "gulp-bower": "0.0.10",
-    "gulp-jslint": "0.2.2",
-    "event-stream": "3.3.1",
-    "jasmine": "^2.4.1",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-jasmine": "^0.3.6",
-    "karma-ng-html2js-preprocessor": "^0.2.0",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "phantomjs": "^1.9.19"
+  "scripts": {
+    "build": "gulp build",
+    "gulp": "gulp",
+    "karma": "karma",
+    "test": "karma start"
   },
-  "engine": "node >= 0.12.7"
+  "dependencies": {
+    "jquery": "2.2.4",
+    "underscore": "1.9.1",
+    "angular": "1.7.8",
+    "angular-route": "1.7.8",
+    "angular-mocks": "1.7.8",
+    "normalize.css": "3.0.3",
+    "font-awesome": "4.4.0",
+    "lato": "git+https://github.com/mrkelly/lato#v0.3.0",
+    "foundation-sites": "5.5.3"
+  },
+  "devDependencies": {
+    "del": "5.0.0",
+    "gulp": "4.0.2",
+    "gulp-autoprefixer": "6.1.0",
+    "gulp-concat": "2.6.1",
+    "gulp-if": "3.0.0",
+    "gulp-jade": "1.1.0",
+    "gulp-jslint": "1.0.10",
+    "gulp-sass": "4.0.2",
+    "gulp-sourcemaps": "2.6.5",
+    "gulp-uglify": "3.0.2",
+    "gulp.spritesmith": "6.10.1",
+    "jasmine": "^3.4.0",
+    "jasmine-core": "^3.4.0",
+    "jstransformer-marked": "1.0.3",
+    "karma": "^4.2.0",
+    "karma-chrome-launcher": "^3.0.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "puppeteer": "^1.19.0"
+  },
+  "engine": "node >= 8"
 }
