--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>tomitribe-io-www</artifactId>
-    <version>0.0.8</version>
+    <version>0.0.8-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>Tomitribe :: IO :: Website</name>
 
@@ -212,7 +212,7 @@
         <url>scm:git:git@github.com:tomitribe/tomitribe.io.git</url>
         <connection>scm:git:git@github.com:tomitribe/tomitribe.io.git</connection>
         <developerConnection>scm:git:git@github.com:tomitribe/tomitribe.io.git</developerConnection>
-        <tag>tomitribe-io-www-0.0.8</tag>
+        <tag>0.0.1</tag>
     </scm>
 
     <repositories>
