--- a/pom.xml
+++ b/pom.xml
@@ -217,9 +217,20 @@
 
     <repositories>
         <repository>
+            <id>apache.snapshots</id>
+            <name>Apache Development Snapshot Repository</name>
+            <url>https://repository.apache.org/content/repositories/snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
             <id>tomitribe-all</id>
             <name>Tomitribe Repository</name>
-            <url>http://repository.tomitribe.com/content/groups/tomitribe/</url>
+            <url>https://repository.tomitribe.com/content/groups/tomitribe/</url>
         </repository>
     </repositories>
 </project>
