--- a/src/main/static/package.json
+++ b/src/main/static/package.json
@@ -29,10 +29,11 @@
     "del": "5.0.0",
     "gulp": "4.0.2",
     "gulp-autoprefixer": "6.1.0",
+    "gulp-clean-css": "4.2.0",
     "gulp-concat": "2.6.1",
     "gulp-if": "3.0.0",
-    "gulp-jade": "1.1.0",
     "gulp-jslint": "1.0.10",
+    "gulp-pug": "4.0.1",
     "gulp-sass": "4.0.2",
     "gulp-sourcemaps": "2.6.5",
     "gulp-uglify": "3.0.2",
