--- a/generation/package.json
+++ b/generation/package.json
@@ -32,6 +32,7 @@
     "gulp-if": "3.0.0",
     "gulp-jslint": "1.0.10",
     "gulp-pug": "5.0.0",
+    "gulp-rename": "2.0.0",
     "gulp-sass": "5.1.0",
     "gulp-sourcemaps": "3.0.0",
     "gulp-uglify": "3.0.2",
