--- a/generation/package.json
+++ b/generation/package.json
@@ -29,8 +29,8 @@
     "gulp-autoprefixer": "6.1.0",
     "gulp-clean-css": "4.3.0",
     "gulp-concat": "2.6.1",
+    "gulp-eslint-new": "1.5.1",
     "gulp-if": "3.0.0",
-    "gulp-jslint": "1.0.10",
     "gulp-pug": "5.0.0",
     "gulp-rename": "2.0.0",
     "gulp-sass": "5.1.0",
