--- a/generation/package.json
+++ b/generation/package.json
@@ -18,6 +18,7 @@
     "angular-route": "1.8.3",
     "font-awesome": "4.7.0",
     "foundation-sites": "5.5.3",
+    "gulp-replace": "^1.1.4",
     "jquery": "3.6.0",
     "lato": "git+https://github.com/mrkelly/lato#v0.3.0",
     "normalize.css": "8.0.1",
