--- a/generation/package.json
+++ b/generation/package.json
@@ -10,6 +10,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "build": "gulp build",
+    "sitemap": "gulp sitemap",
     "watch": "gulp"
   },
   "dependencies": {
@@ -18,7 +19,6 @@
     "angular-route": "1.8.3",
     "font-awesome": "4.7.0",
     "foundation-sites": "5.5.3",
-    "gulp-replace": "^1.1.4",
     "jquery": "3.6.0",
     "lato": "git+https://github.com/mrkelly/lato#v0.3.0",
     "normalize.css": "8.0.1",
@@ -34,7 +34,10 @@
     "gulp-if": "3.0.0",
     "gulp-pug": "5.0.0",
     "gulp-rename": "2.0.0",
+    "gulp-replace": "1.1.4",
     "gulp-sass": "5.1.0",
+    "gulp-save": "^1.3.0",
+    "gulp-sitemap": "8.0.0",
     "gulp-sourcemaps": "3.0.0",
     "gulp-uglify": "3.0.2",
     "gulp.spritesmith": "6.13.0",
